# imap_mcp

./: .gitignore  .pdm-python  LICENSE.MD  README.md  pyproject.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: base-issue-template.md  bug_report.md  feature-criteria.md  feature_request.md  minor.md
.github/PULL_REQUEST_TEMPLATE/: base-pr-template.md  bug-fix.md  feature.md  minor.md
scripts/: setup_git_hooks.sh
src/: __about__.py  main.py
src/logging/: __init__.py  logging.py
