[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "imap_mcp"
version = "0.1.0"
description = 'This is a Django project for executing an OpenTofu build from a static or data-driven configuration'
readme = "README.md"
requires-python = ">=3.13"
keywords = []
authors = [
  { name = "Jeff Lowrey", email = "jeff@jaral.org" },
]
classifiers = [
  "Development Status :: 1 - Pre-alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "httpx",
  "mcp[cli]",
]

[project.optional-dependencies]
dev = [
  "isort", 
  "ruff", 
  "pytest", 
  "pytest-asyncio", 
  "pylance",
  "wheel",
  "setuptools",
  "mypy>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/Jeff_Lowrey/imap_mcp#readme"
Issues = "https://github.com/Jeff_Lowrey/imap_mcp/issues"
Source = "https://github.com/Jeff_Lowrey/imap_mcp"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "isort", 
  "ruff", 
  "pytest", 
  "pytest-asyncio", 
  "pylance",
  "wheel",
  "setuptools",
  "mypy>=1.0.0",
]

[tool.pdm.scripts]
test = {shell = "PYTHONPATH=src pytest tests"}
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src tests"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/*__pycache__",
    "**.ruff_cache",
    "**vscode",
    "**.venv",
    "**__pypackages__",
    "**dist",
    "/Library"
]

reportUnnecessaryIsInstance = false

[tool.ruff]
extend-exclude = [".ipynb"]
line-length = 120

[tool.coverage.run]
source_pkgs = ["imap_mcp", "tests"]
branch = true
parallel = true
omit = [
  "src/__about__.py",
]

[tool.coverage.paths]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
